locate Chrome/Chromium

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "develop": "nodemon index.js",
     "start": "node index.js",
-    "postinstall": "npx puppeteer install"
+    "postinstall": "npx puppeteer install --force"
   },
   "author": "",
   "license": "ISC",
