--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "develop": "nodemon index.js",
-    "start": "node index.js",
-    "postinstall": "npx puppeteer install --force"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
