--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   },
   "author": "",
   "license": "ISC",
-"dependencies": {
-  "cors": "^2.8.5",
-  "dotenv": "^16.4.5",
-  "express": "^4.21.1",
-  "puppeteer-core": "^23.8.0",
-  "nodemon": "^3.1.7"
-}
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "puppeteer": "^23.8.0",
+    "nodemon": "^3.1.7"
+  }
 }
