--- a/package.json
+++ b/package.json
@@ -1,23 +1,19 @@
 {
-  "name": "input-box-scraper-api",
+  "name": "puppeteer-render",
   "version": "1.0.0",
-  "description": "API to scrape input box elements and styles from a given URL",
+  "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "develop": "nodemon index.js",
-    "start": "node index.js"
+    "start": "node index"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "nodemon": "^3.1.7",
-    "puppeteer": "^23.8.0",
-    "puppeteer-extra": "^3.3.4",
-    "puppeteer-extra-plugin-stealth": "^2.11.1"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "puppeteer": "^19.7.2",
+    "cors": "^2.8.5"
   }
 }
